--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 
 :root {
-  --container-height: 600px;
+  --container-height: fit-content;
   --contaier-width: 400px;
   --header-height: 150px;
 }
@@ -10,7 +10,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Ubuntu', monospace;
+  font-family: "Ubuntu", monospace;
 }
 html {
   font-size: 20px;
@@ -22,32 +22,39 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #79c2d0;
+
   min-height: 100vh;
- 
+  background-image: url(img/bgimg.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+
   flex-direction: column;
 }
-.h1text{
-    width: 100%;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: 	 #5585b5; 
-
+.h1text {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #5585b5;
 }
 
 .container {
   background-color: antiquewhite;
   width: var(--contaier-width);
   height: var(--container-height);
+  margin-top: 2em;
+  margin-bottom: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 40%;
 
   position: relative;
   overflow: hidden;
 }
-.card{
-    margin-top:2em;
-    margin-bottom: 8px;
+.card {
+  margin-top: 2em;
+  margin-bottom: 8px;
 }
 .new-todo {
   width: 100%;
@@ -85,14 +92,12 @@ body {
 
 #todos-list {
   height: 60vh;
-  background-color:#f9f8eb; 
+  background-color: #f9f8eb;
   padding: 0.5rem;
   border: 1px solid rgb(219, 219, 219);
   overflow: scroll;
   border-radius: 0 0 5px 5px;
-  width:500px;
-   
- 
+  width: 100%;
 }
 
 #todos-list .todo {
@@ -100,7 +105,7 @@ body {
   align-items: center;
   padding: 0.75rem 0.5rem;
   border-radius: 5px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: black;
 }
 #todos-list .todo:hover {
@@ -130,11 +135,24 @@ body {
   margin: 0;
 }
 
-.submitBtn{
-    background-color: 	#5585b5; 
-
+.submitBtn {
+  display: flex;
+  background-color: #5585b5;
+  width: 100%;
+  text-align: center;
 }
+
 footer {
-    margin-top: auto;
-    font-size: 12px;
+  margin-top: auto;
+  font-size: 12px;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    width: 100%;
+    height: 90vh;
   }
+  .container {
+    width: 100%;
+  }
+}
