--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ footer {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 40%;
+  background-color: #f9f8eb;
 }
 /* Add styles for draggable and dragging tasks */
 .todo[draggable="true"] {
